--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "typescript": "^5.4.5"
   },
   "scripts": {
-    "test": "jest",
+    "test": "jest --silent=false",
     "build": "tsc"
   }
 }
