--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jest": "^29.7.0"
   },
   "dependencies": {
+    "csv-parse": "^5.5.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
